# Zend_Cloud

./: .project  README.txt  TODO
documentation/: Makefile.in  Zend_Cloud_DocumentService.xml  Zend_Cloud_QueueService.xml  Zend_Cloud_StorageService.xml  configure.in  html.xsl.in  manual-lint.xml.in  manual.xml.in
documentation/module_specs/: Zend_Cloud_DocumentService.xml  Zend_Cloud_StorageService.xml
documentation/ref/: copyrights.xml
examples/cloudexp/: .zfproject.xml
examples/cloudexp/application/: Bootstrap.php
examples/cloudexp/application/configs/: application.ini.dist
examples/cloudexp/application/controllers/: DocumentController.php  IndexController.php  QueueController.php  StorageController.php
tests/: TestConfiguration.php  TestConfiguration.php.dist  TestHelper.php
tests/Zend/Cloud/: AllTests.php  DocumentServiceTestCase.php  FactoryTest.php  QueueServiceTestCase.php  StorageServiceTestCase.php
tests/Zend/Cloud/DocumentService/: AllTests.php  FactoryTest.php  TestCase.php
tests/Zend/Cloud/DocumentService/Adapter/: AllTests.php  SimpleDBTest.php  WindowsAzureTest.php
tests/Zend/Cloud/Queue/: AllTests.php
tests/Zend/Cloud/Queue/Adapter/: AllTests.php  SQSTest.php
tests/Zend/Cloud/QueueService/: AllTests.php  FactoryTest.php  TestCase.php
tests/Zend/Cloud/Storage/: AllTests.php  FactoryTest.php
tests/Zend/Cloud/StorageService/: AllTests.php  FactoryTest.php  TestCase.php
tests/Zend/Http/Client/: AllTests.php  CommonHttpTests.php  CurlTest.php  SocketTest.php  StaticTest.php
tests/Zend/Service/Amazon/: AllTests.php
(+40 files in other folders)
